--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/lucid": "^18.3.0",
     "@adonisjs/repl": "^3.1.0",
+    "@faker-js/faker": "^7.6.0",
     "luxon": "^3.2.0",
     "mysql2": "^2.3.3",
     "phc-argon2": "^1.1.4",
