--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "node ace serve --watch",
-    "build": "node ace build --production",
+    "build:local": "node ace build --production",
+    "build": "node ace build --production && cp .env build/.env && cd build/ && yarn install --production && echo '>>>>>>>>>>>>>>>>> ATUALIZE AGORA o: PM2 ex: pm2 realod 3 <<<<<<<<<<<<<<<<<'",
     "start": "node server.js"
   },
   "devDependencies": {
@@ -13,6 +14,7 @@
     "@japa/runner": "^2.2.2",
     "@types/proxy-addr": "^2.0.0",
     "@types/source-map-support": "^0.5.6",
+    "@faker-js/faker": "^7.1.0",
     "adonis-preset-ts": "^2.1.0",
     "pino-pretty": "^9.1.1",
     "typescript": "~4.6",
@@ -21,6 +23,7 @@
   },
   "dependencies": {
     "@adonisjs/auth": "^8.2.3",
+    "@adonisjs/bouncer": "^2.3.0",
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/lucid": "^18.3.0",
     "@adonisjs/repl": "^3.1.0",
